Album Service done
