# backend/Controllers/Albums.py
@@ -1,7 +1,7 @@
 from flask import jsonify, Blueprint, request
 from Models.AlbumModel import Album
 from extensions import db
-from Services import AlbumsServices
+from Services import AlbumService
 
 albums = Blueprint("albums", __name__)
 
@@ -17,51 +17,21 @@ def update_album(album_id):
     genreId = data.get('GenreID')
 
     # Find the existing album in the database
-    existing_album = Album.query.get(album_id)
-
-    # Check if the album exists
-    if existing_album:
-        # Update the album attributes if the corresponding data is provided in the request
-        if title:
-            existing_album.Title = title
-        if publishingDate:
-            existing_album.Publishing_Date = publishingDate
-        if cover:
-            existing_album.Cover = cover
-        if artistId:
-            existing_album.ArtistID = artistId
-        if genreId:
-            existing_album.GenreID = genreId
-
-        # Commit the changes to the database
-        db.session.commit()
-
-        # Return the updated album data
-        album_data = {
-            'Title': existing_album.Title,
-            'Publishing_Date': existing_album.Publishing_Date,
-            'Cover': existing_album.Cover,
-            'ArtistID': existing_album.ArtistID,
-            'GenreID': existing_album.GenreID
-        }
-
-        return jsonify({'album': album_data}), 200  # 200 OK status code
-    else:
+    album_data = AlbumService.update_album(album_id, title, publishingDate, cover, artistId, genreId)
+    if album_data is None:
         return jsonify({'error': 'Album not found'}), 404  # 404 Not Found status code
+    else:
+        return jsonify({'album': album_data}), 200  # 200 OK status code
 
 
 @albums.route('/<int:album_id>', methods=['DELETE'])
 def delete_album(album_id):
     # Check if the album exists
-    album = Album.query.get(album_id)
+    album = AlbumService.delete_album(album_id)
     if album is None:
         return jsonify({'error': 'Album not found'}), 404  # 404 Not Found status code
-
-    # Delete the album from the database
-    db.session.delete(album)
-    db.session.commit()
-
-    return jsonify({'message': 'Album deleted successfully'}), 200  # 200 OK status code
+    else:
+        return jsonify({'message': 'Album deleted successfully.'}), 200  # 200 OK status code
 
 
 @albums.route('/', methods=['POST'])
@@ -74,30 +44,14 @@ def create_album():
     artistId = data.get('ArtistID')
     genreId = data.get('GenreID')
 
-    # Validate data (you might want to add more validation based on your requirements)
-
-    # Create a new album object
-    new_album = Album(Title=title, Publishing_Date=publishingDate, Cover=cover, ArtistID=artistId, GenreID=genreId)
-
-    # Add the new album to the database
-    db.session.add(new_album)
-    db.session.commit()
-
-    # Return the created album data
-    album_data = {
-        'Title': new_album.Title,
-        'Publishing_Date': new_album.Publishing_Date,
-        'Cover': new_album.Cover,
-        'ArtistID': new_album.ArtistID,
-        'GenreID': new_album.GenreID
-    }
+    album_data = AlbumService.create_album(title, publishingDate, cover, artistId, genreId)
 
     return jsonify({'album': album_data}), 201  # 201 Created status code
 
 
 @albums.route('/<int:album_id>', methods=['GET'])
 def get_album(album_id):
-    album = AlbumsServices.get_album(album_id)
+    album = AlbumService.get_album(album_id)
 
     if(album == None):
         return jsonify({'error': 'Album not found'}), 404
@@ -107,16 +61,5 @@ def get_album(album_id):
 
 @albums.route('/', methods=['GET'])
 def get_albums():
-    albums = Album.query.all()
-    # Serialize data into JSON
-    albums_list = []
-    for album in albums:
-        albums_list.append({
-            'AlbumID': album.AlbumID,
-            'Title': album.Title,
-            'Publishing_Date': str(album.Publishing_Date),
-            'Cover': album.Cover,
-            'ArtistID': album.ArtistID,
-            'GenreID': album.GenreID
-        })
+    albums_list = AlbumService.get_albums()
     return jsonify({'albums': albums_list})
